finish almost all porting, some bugs left